fix: add a height to reaction pills
height needed when reactions wrap as otherwise second row looks a bit squashed

--- a/dt-assets/scss/_details.scss
+++ b/dt-assets/scss/_details.scss
@@ -230,6 +230,7 @@ DT comments and activity
         background-color: #f8f8f8;
         border-radius: 100px;
         padding: 0.1rem 0.5rem;
+        height: 1.6rem;
         font-size: 0.9rem;
         line-height: 0.9rem;
         display: flex;
